unpackaged/main/default/objects/Equipment__c/Equipment__c.object-meta.xml
<CustomObject>
    <label>Equipment</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Equipment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>