unpackaged/main/default/objects/Equipment__c/fields/Business_Laptop_Make__c.field-meta.xml
<CustomField>
    <fullName>Business_Laptop_Make__c</fullName>
    <label>Business Laptop Make</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DELL</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>APPLE</fullName>
                <isActive>false</isActive>
                <label>APPLE</label>
            </value>
            <value>
                <fullName>LENOVO</fullName>
                <isActive>false</isActive>
                <label>LENOVO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>