unpackaged/main/default/objects/Equipment__c/fields/Employee_Record__c.field-meta.xml
<CustomField>
    <fullName>Employee_Record__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee Record</label>
    <referenceTo>Employee_Record__c</referenceTo>
    <relationshipLabel>Equipment</relationshipLabel>
    <relationshipName>Equipment</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>