unpackaged/main/default/objects/Equipment__c/fields/Enerjyhub_Synced_Record_ID2__c.field-meta.xml
<CustomField>
    <fullName>Enerjyhub_Synced_Record_ID2__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Enerjyhub Synced Record ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>