unpackaged/main/default/objects/Equipment__c/fields/IMEI_number__c.field-meta.xml
<CustomField>
    <fullName>IMEI_number__c</fullName>
    <label>IMEI Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>