unpackaged/main/default/objects/Equipment__c/fields/MobileModel__c.field-meta.xml
<CustomField>
    <fullName>MobileModel__c</fullName>
    <label>Mobile Phone Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>