unpackaged/main/default/objects/Equipment__c/fields/MobilePhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>MobilePhoneNumber__c</fullName>
    <label>Mobile Phone Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>