unpackaged/main/default/objects/Equipment__c/fields/SIM_Number__c.field-meta.xml
<CustomField>
    <fullName>SIM_Number__c</fullName>
    <label>SIM Number</label>
    <length>19</length>
    <type>Text</type>
</CustomField>