unpackaged/main/default/objects/Equipment__c/recordTypes/Business_Laptop.recordType-meta.xml
<RecordType>
    <fullName>Business_Laptop</fullName>
    <active>true</active>
    <label>Business Laptop</label>
</RecordType>