unpackaged/main/default/objects/Equipment__c/recordTypes/Business_Phone.recordType-meta.xml
<RecordType>
    <fullName>Business_Phone</fullName>
    <active>true</active>
    <label>Business Phone</label>
</RecordType>