unpackaged/main/default/objects/Equipment__c/validationRules/IMEI_Number_length.validationRule-meta.xml
<ValidationRule>
    <fullName>IMEI_Number_length</fullName>
    <active>true</active>
    <errorConditionFormula>AND

(NOT(ISBLANK(  IMEI_number__c )),

LEN (  IMEI_number__c ) &lt;&gt;15)</errorConditionFormula>
    <errorDisplayField>IMEI_number__c</errorDisplayField>
    <errorMessage>IMEI Number must be 15 digits</errorMessage>
</ValidationRule>