unpackaged/main/default/objects/Equipment__c/validationRules/Required_Fields_for_Business_Laptop.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields_for_Business_Laptop</fullName>
    <active>true</active>
    <description>Business Laptop Make and Business Laptop Service Tag must be populated</description>
    <errorConditionFormula>RecordType.Name = "Business Laptop"

&amp;&amp;

(ISBLANK( Business_Laptop_Service_Tag__c )
 || 
( ISPICKVAL( Business_Laptop_Make__c , "")))</errorConditionFormula>
    <errorMessage>Business Laptop Make and Business Laptop Service Tag must be populated</errorMessage>
</ValidationRule>