unpackaged/main/default/objects/Equipment__c/validationRules/Required_Fields_for_Business_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields_for_Business_Phone</fullName>
    <active>true</active>
    <description>IMEI and SIM Number must be populated</description>
    <errorConditionFormula>RecordType.Name = "Business Phone"

&amp;&amp;

(ISBLANK(  IMEI_number__c  )
 || 
ISBLANK(  SIM_Number__c   ))</errorConditionFormula>
    <errorMessage>IMEI and SIM Number must be populated</errorMessage>
</ValidationRule>