unpackaged/main/default/objects/Equipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Employee_Record__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Business_Laptop_Make__c</columns>
    <columns>Business_Laptop_Service_Tag__c</columns>
    <columns>IMEI_number__c</columns>
    <columns>SIM_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>